<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_return"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_return"/>
    <item
        android:id="@+id/action_getGPS"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_getGPS"/>
    <item
        android:id="@+id/action_distanceEvent"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_distanceEvent">
        <menu>
            <item
                android:id="@+id/subEvent1"
                android:title="@string/subEvent1"/>
            <item
                android:id="@+id/subEvent2"
                android:title="@string/subEvent2"/>
            <item
                android:id="@+id/subEvent3"
                android:title="@string/subEvent3"/>
            <item
                android:id="@+id/subEvent4"
                android:title="@string/subEvent4"/>
            <item
                android:id="@+id/subEvent5"
                android:title="@string/subEvent5"/>
            <item
                android:id="@+id/subEvent6"
                android:title="@string/subEvent6"/>
            <item
                android:id="@+id/subEvent7"
                android:title="@string/subEvent7"/>
            <item
                android:id="@+id/subEvent8"
                android:title="@string/subEvent8"/>
            <item
                android:id="@+id/subEvent9"
                android:title="@string/subEvent9"/>
            <item
                android:id="@+id/subEvent10"
                android:title="@string/subEvent10"/>
            <item
                android:id="@+id/subEvent11"
                android:title="@string/subEvent11"/>
            <item
                android:id="@+id/subEvent12"
                android:title="@string/subEvent12"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_distance"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_distance"/>
    <item
        android:id="@+id/action_countries"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_countries">
        <menu>
            <item
                android:id="@+id/subCountry1"
                android:title="@string/subCountry1"/>
            <item
                android:id="@+id/subCountry2"
                android:title="@string/subCountry2"/>
            <item
                android:id="@+id/subCountry3"
                android:title="@string/subCountry3"/>
            <item
                android:id="@+id/subCountry4"
                android:title="@string/subCountry4"/>
            <item
                android:id="@+id/subCountry5"
                android:title="@string/subCountry5"/>
            <item
                android:id="@+id/subCountry6"
                android:title="@string/subCountry6"/>
            <item
                android:id="@+id/subCountry7"
                android:title="@string/subCountry7"/>
            <item
                android:id="@+id/subCountry8"
                android:title="@string/subCountry8"/>
            <item
                android:id="@+id/subCountry9"
                android:title="@string/subCountry9"/>
            <item
                android:id="@+id/subCountry10"
                android:title="@string/subCountry10"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_view"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_view">
        <menu>
            <item
                android:id="@+id/subViewNorm"
                android:title="@string/subViewNorm"/>
            <item
                android:id="@+id/subViewTerr"
                android:title="@string/subViewTerr"/>
            <item
                android:id="@+id/subViewHyb"
                android:title="@string/subViewHyb"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_cancel"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_cancel"/>

</menu>